# cnvmsg

./: Makefile  README.md  mkdocs.yml  pyproject.toml
cnvmsg/: __init__.py  enums.py  errors.py  models.py
cnvmsg/parsing/: __init__.py  _parse.py  patterns.py  test_composite.py  test_single.py
cnvmsg/utils/: string.py
cvm/: __init__.py  constants.py  enums.py  errors.py  models.py  parse.py  test_parse.py
cvm/parse/: _block.py  parse.py  patterns.py  test_composite.py  test_main.py  test_single.py
cvm/parsing/: __init__.py  _parse.py  patterns.py  test_composite.py  test_single.py
docs/: index.md  reference.md
tests/: test_publicapi.py
