[tool.poetry]
name = "cvm"
version = "0.1.0"
description = "Conventional Message handling"
authors = ["ryzhovalex <thed4rkof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.215"
git-changelog = "^1.0.0"
coverage = "^6.5.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
